--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,99 @@
 <!DOCTYPE html>
 <html lang="ru">
     <!-- Ваше решение -->
+    <head>
+        <meta charset="utf-8">
+        <title>document</title>
+        <style>
+            body {
+                width: 960px;
+                margin: 10px;
+                padding: 0px;
+                color: white;
+
+            }
+            header { 
+                background-color: red;
+                font-size: 24px;
+                text-align: center;
+                padding-top: 0px;
+                margin-bottom: 0px;
+                padding-bottom: 0px;
+            }
+            h1 {
+                margin: 0px;
+            }
+            nav {
+                background-color: olivedrab;
+                height: 40px;
+                padding-top: 10px;
+                margin-bottom: 0px;
+                padding-bottom: 0px;
+            }
+            a {
+                color: white;
+                margin-bottom: 0px;
+            }
+            main {
+                background-color: rgb(202, 108, 171);
+                margin-top: 0px;
+                padding: 10px;
+            }
+            h2 {
+                margin-top: 0px;
+                padding-top: 10px;
+                padding-left: 10px;
+            }
+            article {
+                background-color: blue;
+                margin: 0px;
+                padding: 0px;
+                margin-bottom: 5px;
+            }
+            ul, ol {
+                margin: 0px;
+                padding-bottom: 20px;
+            }
+            footer {
+                background-color: blueviolet;
+                font-size: 24px;
+                text-align: center;
+            }
+
+        
+
+            
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>Header</h1>
+            <nav>
+                <a href="1.html">Navigation 1</a>
+                <a href="2.html">Navigation 2</a>
+                <a href="3.html">Navigation 3</a>
+            </nav>
+        </header>
+        <main>
+            <article>
+                <h2>Article 1</h2>
+                <ul>
+                    <li>Оригинальная трилогия</li>
+                    <li>Трилогия приквелов</li>
+                    <li>Трилогия сиквелов</li>
+                </ul>
+            </article>
+            <article>
+                <h2>Article 2</h2>
+                <ol>
+                    <li>Эпизод IV — Новая надежда</li>
+                    <li>Эпизод V — Империя наносит ответный удар</li>
+                    <li>Эпизод VI — Возвращение джедая</li>
+                </ol>
+            </article>
+        </main>
+        <footer>
+            <h1>Footer</h1>
+        </footer>
+    </body>
 </html>
