add dz accordion

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -8,34 +8,34 @@
     <body>
         <div class="accordion">
             <section class="accordion__item">
-                <details>
-                    <summary class="accordion__item__summary">
+                <details class="accordion__details">
+                    <summary class="accordion accordion__summary">
                         Reading is rewarding
-                        <img src='../../assets/images/arrow.png'>
+                        <img class="accordion__arrow" src='../../assets/images/arrow.png'>
                     </summary>
-                    <p class="accordion__item__content">
+                    <p class="accordion accordion__content">
                         Being able to read a novel in another language and understand it is a huge achievement. You’ll feel accomplished the moment you read that final page, close the book, and reflect on the experience. You might find yourself at the last page faster than you thought—once you begin reading these books, you won’t be able to put them down.
                     </p>
                 </details>
             </section>
             <section class="accordion__item">
-                <details>
-                    <summary class="accordion__item__summary">
+                <details class="accordion__details">
+                    <summary class="accordion accordion__summary">
                         Reading opens the mind
-                        <img src='../../assets/images/arrow.png'>
+                        <img class="accordion__arrow" src='../../assets/images/arrow.png'>
                     </summary>
-                    <p class="accordion__item__content">
+                    <p class="accordion accordion__content">
                         Reading educates. It opens you up to new experiences and perspectives. What better way is there to understand someone’s way of thinking? You may learn new information about language, culture, society, and history that you never knew before.
                     </p>
                 </details>
             </section>
             <section class="accordion__item">
-                <details>
-                    <summary class="accordion__item__summary">
+                <details class="accordion__details">
+                    <summary class="accordion accordion__summary">
                         Reading is fun
-                        <img src='../../assets/images/arrow.png'>
+                        <img class="accordion__arrow" src='../../assets/images/arrow.png'>
                     </summary>
-                    <p class="accordion__item__content">
+                    <p class="accordion accordion__content">
                         It is, overall, an enjoyable and relaxing way to learn English without any stress whatsoever. People get frustrated when they choose books that go above their reading levels. By choosing your first English books wisely, you should have a very positive experience.
                     </p>
                 </details>
