--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -6,6 +6,50 @@
         <link rel="stylesheet" href="./histogram.css">
     </head>
     <body>
-
+        <div class="gistogram">
+            <div class="gistogram__info">
+                <div class="gistogram__info_section-1">
+                    <div class="gistogram__info_title">Total orders</div>
+                    <div class="gistogram__info_total">50254</div>
+                </div>
+                <div class="gistogram__info_section-2">
+                    <div class="gistogram__info_details">
+                        <a class="gistogram__info-link" href="">View all</a>
+                </div>
+                </div>
+            </div>
+            <div class="gistogram__chart">
+                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
+                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
+            </div>
+        </div>
     </body>
 </html>
