--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -6,6 +6,19 @@
         <link rel="stylesheet" href="./skeleton.css">
     </head>
     <body>
+        <div class="skeleton">
+            <div class="skeleton__header">
+                <div class="skeleton__header-avatar"></div>
+                <div class="skeleton__header-info">
+                    <div class="skeleton__info skeleton__info_header-title"></div>
+                    <div class="skeleton__info skeleton__info_header-text"></div>
+                </div>
+            </div>
+            <div class="skeleton__main">
+                <div class="skeleton__info skeleton__info_main"></div>
+                <div class="skeleton__info skeleton__info_main"></div>
+            </div>
+        </div>
 
     </body>
 </html>
