--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -7,48 +7,48 @@
     </head>
     <body>
         <div class="gistogram">
-            <div class="gistogram__info">
-                <div class="gistogram__info_section-1">
-                    <div class="gistogram__info_title">Total orders</div>
-                    <div class="gistogram__info_total">50254</div>
+            <div class="gistogram__header">
+                <div class="gistogram__header-section-title">
+                    <div class="gistogram__header-title">Total orders</div>
+                    <div class="gistogram__header-orders">50254</div>
                 </div>
-                <div class="gistogram__info_section-2">
-                    <div class="gistogram__info_details">
-                        <a class="gistogram__info-link" href="">View all</a>
-                </div>
+                <div class="gistogram__header-section-link">
+                    <div class="gistogram__header-link-text">
+                        <a class="gistogram__header-link" href="">View all</a>
+                    </div>
                 </div>
             </div>
             <div class="gistogram__chart">
-                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_18"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_70"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_100"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_30"></div>
-                <div class="gistogram__chart-section gistogram__chart-section_50"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_100"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_50"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_18"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_70"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_100"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_18"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_70"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_50"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_18"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_100"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_18"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_70"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_50"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_18"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_70"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_50"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_18"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_70"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_100"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_30"></div>
+                <div class="gistogram__chart-column gistogram__chart-column_50"></div>
             </div>
         </div>
     </body>
