--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -9,14 +9,14 @@
         <div class="skeleton">
             <div class="skeleton__header">
                 <div class="skeleton__header-avatar"></div>
-                <div class="skeleton__header-info">
-                    <div class="skeleton__info skeleton__info_header-title"></div>
-                    <div class="skeleton__info skeleton__info_header-text"></div>
+                <div class="skeleton__header-line">
+                    <div class="skeleton__line skeleton__line_short"></div>
+                    <div class="skeleton__line skeleton__line_middle"></div>
                 </div>
             </div>
             <div class="skeleton__main">
-                <div class="skeleton__info skeleton__info_main"></div>
-                <div class="skeleton__info skeleton__info_main"></div>
+                <div class="skeleton__line skeleton__line_long"></div>
+                <div class="skeleton__line skeleton__line_long"></div>
             </div>
         </div>
 
