--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
         <link rel="stylesheet" href="./assets/css/main.css">
     </head>
     <body>
-
+        <div class="page">
+            <header class="header">
+                <div class="container">
+                    <h1 class="header__title">Reusable component library</h1>
+                </div>
+            </header>
+            <main class="preview page__main">
+                <div class="container">
+                    <div class="preview__inner">
+                        <div class="card preview__inner-card"></div>
+                        <div class="card preview__inner-card"></div>
+                        <div class="card preview__inner-card"></div>
+                        <!-- <div class="card preview__inner-card"></div> -->
+                    </div>
+                </div>
+            </main>
+            <footer class="footer"></footer>
+        </div>
     </body>
 </html>
