--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -8,14 +8,12 @@
     <body>
         <div class="gistogram">
             <div class="gistogram__header">
-                <div class="gistogram__header-section-title">
-                    <div class="gistogram__header-title">Total orders</div>
-                    <div class="gistogram__header-orders">50254</div>
+                <div class="gistogram__header-title">
+                    <div class="gistogram__title">Total orders</div>
+                    <div class="gistogram__orders">50254</div>
                 </div>
-                <div class="gistogram__header-section-link">
-                    <div class="gistogram__header-link-text">
-                        <a class="gistogram__header-link" href="">View all</a>
-                    </div>
+                <div class="gistogram__header-link">
+                    <a class="gistogram__link" href="">View all</a>
                 </div>
             </div>
             <div class="gistogram__chart">
