--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -7,6 +7,55 @@
         <title>Calendar</title>
     </head>
     <body>
+        <div class="calendar">
+            <div class="calendar__title">October 2019</div>
+            <div class="calendar__wrapper">
+                <div class="calendar__inner">
+                    <div class="calendar__days calendar__days_week">Mon</div>
+                    <div class="calendar__days calendar__days_week">Tue</div>
+                    <div class="calendar__days calendar__days_week">Wed</div>
+                    <div class="calendar__days calendar__days_week">Thu</div>
+                    <div class="calendar__days calendar__days_week">Fri</div>
+                    <div class="calendar__days calendar__days_week">Sat</div>
+                    <div class="calendar__days calendar__days_week">Sun</div>
+                    <div class="calendar__days"></div>
+                    <div class="calendar__days"></div>
+                    <div class="calendar__days"></div>
+                    <div class="calendar__days"></div>
+                    <div class="calendar__days">1</div>
+                    <div class="calendar__days">2</div>
+                    <div class="calendar__days">3</div>
+                    <div class="calendar__days">4</div>
+                    <div class="calendar__days">5</div>
+                    <div class="calendar__days">6</div>
+                    <div class="calendar__days">7</div>
+                    <div class="calendar__days">8</div>
+                    <div class="calendar__days">9</div>
+                    <div class="calendar__days">10</div>
+                    <div class="calendar__days">11</div>
+                    <div class="calendar__days">12</div>
+                    <div class="calendar__days">13</div>
+                    <div class="calendar__days">14</div>
+                    <div class="calendar__days">15</div>
+                    <div class="calendar__days">16</div>
+                    <div class="calendar__days">17</div>
+                    <div class="calendar__days calendar__days_active">18</div>
+                    <div class="calendar__days calendar__days_between-active">19</div>
+                    <div class="calendar__days calendar__days_between-active">20</div>
+                    <div class="calendar__days calendar__days_between-active">21</div>
+                    <div class="calendar__days calendar__days_between-active">22</div>
+                    <div class="calendar__days calendar__days_active">23</div>
+                    <div class="calendar__days">24</div>
+                    <div class="calendar__days">25</div>
+                    <div class="calendar__days">26</div>
+                    <div class="calendar__days">27</div>
+                    <div class="calendar__days">28</div>
+                    <div class="calendar__days">29</div>
+                    <div class="calendar__days">30</div>
+                    <div class="calendar__days">31</div>
+            </div>
+            </div>
+        </div>
 
     </body>
 </html>
