--- a/05-lection3/02-modal/index.html
+++ b/05-lection3/02-modal/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <button class="button button_primary" id="modal-open">Open modal</button>
-        <div class="modal__window" id="modal">
-            <div class="modal">
+        <div class="modal" id="modal">
+            <div class="modal__window">
                 <div class="modal__header">
                     <div class="modal__title">Modal title</div>
                     <div class="modal__close" id="modal-close">
