--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="page">
@@ -17,7 +18,7 @@
                         <div class="card preview__inner-card"></div>
                         <div class="card preview__inner-card"></div>
                         <div class="card preview__inner-card"></div>
-                        <!-- <div class="card preview__inner-card"></div> -->
+                        <div class="card preview__inner-card"></div>
                     </div>
                 </div>
             </main>
