add Cards on main page

--- a/index.html
+++ b/index.html
@@ -15,14 +15,35 @@
             <main class="preview page__main">
                 <div class="container">
                     <div class="preview__inner">
-                        <div class="card preview__inner-card"></div>
-                        <div class="card preview__inner-card"></div>
-                        <div class="card preview__inner-card"></div>
-                        <div class="card preview__inner-card"></div>
+                        <div class="card">
+                            <h2 class="card__title">Tooltip</h2>
+                        </div>
+                        <div class="card">
+                            <h2 class="card__title">Custom form elements</h2>
+                        </div>
+                        <div class="card">
+                            <h2 class="card__title">Calendar</h2>
+                        </div>
+                        <div class="card">
+                            <h2 class="card__title">Modal dialog</h2>
+                        </div>
+                        <div class="card">
+                            <h2 class="card__title">Histogram</h2>
+                        </div>
+                        <div class="card">
+                            <h2 class="card__title">Avatar</h2>
+                        </div>
                     </div>
                 </div>
             </main>
-            <footer class="footer"></footer>
+            <footer class="footer">
+                <h1 class="footer__title">About</h1>
+                <p class="footer__text">This project is a collection of professionally designed, 
+                    pre-built, fully responsive HTML snippets you can drop into your projects. 
+                    Get started by checking out our free preview components, or browsing the PNG 
+                    previews in the categories you're most curious about.
+                </p>
+            </footer>
         </div>
     </body>
 </html>
