add Page of components

--- a/pages/template.html
+++ b/pages/template.html
@@ -6,14 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="page page_component">
-            <header class="header header_component"></header>
-            <main class="component">
-                <aside class="component__menu"></aside>
-                <section class="component__window"></section>
+        <div class="page page_component_description">
+            <header class="header header_component_description">
+
+            </header>
+            <main class="component-page">
+                <div class="container">
+                    <div class="component-page__inner">
+                        <aside class="component__menu">
+                            
+                        </aside>
+                        <section class="component__wrapper">
+                            
+                        </section>
+                    </div>
+                </div>
             </main>
-            <footer class="footer footer_component">
-                <p class="footer__text-component">Reusable component library</p>
+            <footer class="footer footer_component_description">
+                <p class="footer__text_component_description">Reusable component library</p>
             </footer>
         </div>
     </body>
