add Page of component

--- a/pages/template.html
+++ b/pages/template.html
@@ -13,10 +13,10 @@
             <main class="component-page">
                 <div class="container">
                     <div class="component-page__inner">
-                        <aside class="component__menu">
+                        <aside class="component-page__menu">
                             
                         </aside>
-                        <section class="component__wrapper">
+                        <section class="component-page__wrapper">
                             
                         </section>
                     </div>
