--- a/06-lection4/01-avatar/index.html
+++ b/06-lection4/01-avatar/index.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="./avatar.css">
     </head>
     <body>
-
+        <div class="avatar">
+            <div class="avatar__circle">
+                <img src="../../06-lection4/01-avatar/public/avatar-200.jpg" 
+                class="avatar__image" alt="Аватар человека с фотоаппаратом">
+            </div>
+        </div>
     </body>
 </html>
