--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -6,6 +6,18 @@
         <link rel="stylesheet" href="./checkbox.css">
     </head>
     <body>
-
+        <label class="checkbox">
+            <input type="checkbox" class="checkbox__input">
+            <span class="checkbox__state">
+                <span class="checkbox__control">
+                    <svg class="checkbox__icon">
+                        <use href="../../assets/icons/icons-sprite.svg#check"></use>
+                    </svg>
+                </span>
+                <span class="checkbox__title">
+                    Default
+                </span>
+            </span>
+        </label>
     </body>
 </html>
