--- a/07-lection5/02-radio/index.html
+++ b/07-lection5/02-radio/index.html
@@ -6,6 +6,40 @@
         <link rel="stylesheet" href="./radio.css">
     </head>
     <body>
-
+        <section class="section-choice">
+            <label class="radio">
+                <input class="radio__input" type="radio" name="choice" value="1">
+                <span class="radio__state">
+                    <span class="radio__control">
+                        <span class="radio__select"></span>
+                    </span>
+                    <span class="radio__title">
+                        Default
+                    </span>
+                </span>
+            </label>
+            <label class="radio">
+                <input class="radio__input" type="radio" name="choice" value="2" checked>
+                <span class="radio__state">
+                    <span class="radio__control">
+                        <span class="radio__select"></span>
+                    </span>
+                    <span class="radio__title">
+                        Selected
+                    </span>
+                </span>
+            </label>
+            <label class="radio">
+                <input class="radio__input" type="radio" name="choice" value="3" disabled>
+                <span class="radio__state">
+                    <span class="radio__control">
+                        <span class="radio__select"></span>
+                    </span>
+                    <span class="radio__title">
+                        Disabled
+                    </span>
+                </span>
+            </label>
+    </section>
     </body>
 </html>
