--- a/07-lection5/03-toggler/index.html
+++ b/07-lection5/03-toggler/index.html
@@ -6,6 +6,32 @@
         <link rel="stylesheet" href="./toggler.css">
     </head>
     <body>
-
+        <label class="toggle">
+            <input class="toggle__input" type="checkbox">
+            <span class="toggle__state">
+                <span class="toggle__control">
+                    <span class="toggle__check"></span>
+                </span>
+                <span class="toggle__title">Off</span>
+            </span>
+        </label>
+        <label class="toggle">
+            <input class="toggle__input" type="checkbox" checked>
+            <span class="toggle__state">
+                <span class="toggle__control">
+                    <span class="toggle__check"></span>
+                </span>
+                <span class="toggle__title">On</span>
+            </span>
+        </label>
+        <label class="toggle">
+            <input class="toggle__input" type="checkbox" disabled>
+            <span class="toggle__state">
+                <span class="toggle__control">
+                    <span class="toggle__check"></span>
+                </span>
+                <span class="toggle__title">Disabled</span>
+            </span>
+        </label>
     </body>
 </html>
