--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -19,5 +19,31 @@
                 </span>
             </span>
         </label>
+        <label class="checkbox">
+            <input type="checkbox" class="checkbox__input" checked>
+            <span class="checkbox__state">
+                <span class="checkbox__control">
+                    <svg class="checkbox__icon">
+                        <use href="../../assets/icons/icons-sprite.svg#check"></use>
+                    </svg>
+                </span>
+                <span class="checkbox__title">
+                    Checked
+                </span>
+            </span>
+        </label>
+        <label class="checkbox">
+            <input type="checkbox" class="checkbox__input" disabled>
+            <span class="checkbox__state">
+                <span class="checkbox__control">
+                    <svg class="checkbox__icon">
+                        <use href="../../assets/icons/icons-sprite.svg#check"></use>
+                    </svg>
+                </span>
+                <span class="checkbox__title">
+                    Disabled
+                </span>
+            </span>
+        </label>
     </body>
 </html>
