--- a/07-lection5/04-input/index.html
+++ b/07-lection5/04-input/index.html
@@ -6,6 +6,51 @@
         <link rel="stylesheet" href="./input.css">
     </head>
     <body>
-
+        <span class="form-group">
+            <label class="form-group__lable">
+                <div class="form-group__title">label</div>
+                <span class="form-group__text">
+                    <input class="form-group__input" type="text" placeholder="Placeholder">
+                </span>
+            </label>
+        </span>
+        <span class="form-group">
+            <label class="form-group__lable">
+                <div class="form-group__title">focus</div>
+                <span class="form-group__text">
+                    <input class="form-group__input form-group__input_focus" type="text" placeholder="Placeholder">
+                </span>
+            </label>
+        </span>
+        <span class="form-group form-group_success">
+            <label class="form-group__lable">
+                <div class="form-group__title">success</div>
+                <span class="form-group__text">
+                    <input class="form-group__input form-group__input_success" type="text" placeholder="Placeholder" value="Success">
+                    <svg class="form-group__icon" id="modal-close">
+                        <use href="../../assets/icons/icons-sprite.svg#success"></use>
+                    </svg>
+                </span>
+            </label>
+        </span>
+        <span class="form-group form-group_error">
+            <label class="form-group__lable">
+                <div class="form-group__title">error</div>
+                <span class="form-group__text">
+                    <input class="form-group__input form-group__input_error" type="text" placeholder="Placeholder" value="Error">
+                    <svg class="form-group__icon" id="modal-close">
+                        <use href="../../assets/icons/icons-sprite.svg#error"></use>
+                    </svg>
+                </span>
+            </label>
+        </span>
+        <span class="form-group form-group_disabled">
+            <label class="form-group__lable">
+                <div class="form-group__title">disabled</div>
+                <span class="form-group__text">
+                    <input class="form-group__input" type="text" placeholder="Placeholder" disabled>
+                </span>
+            </label>
+        </span>
     </body>
 </html>
