--- a/index.html
+++ b/index.html
@@ -8,25 +8,21 @@
     <body>
         <div class="page">
             <header class="header">
-                <div class="container container__header">
-                    <div class="header__logo">
-                        <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="30" height="30" fill="#212429"/>
-                        </svg>
-                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="32" height="32" rx="16" fill="#212429"/>
-                        </svg>
-                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0 0L32 32H0V0Z" fill="#212429"/>
-                        </svg>
+                <div class="container">
+                    <div class="header__content">
+                        <div class="header__logo">
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="30" height="30" fill="#212429"/>
+                            </svg>
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="32" height="32" rx="16" fill="#212429"/>
+                            </svg>
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 0L32 32H0V0Z" fill="#212429"/>
+                            </svg>
+                        </div>
+                        <h1 class="header__title">Reusable component library</h1>
                     </div>
-                    <h1 class="header__title">Reusable component library</h1>
-                    <!-- <div class="header__tabs">
-                        <label class="header__label">All components</label>
-                        <label class="header__label">Elements</label>
-                        <label class="header__label"> Containers</label>
-                        <label class="header__label">Templates</label>
-                    </div> -->
                 </div>
             </header>
             <main class="preview page__main">
@@ -79,28 +75,6 @@
                         
                     </div>
                 </div>
-                <!-- <div class="container">
-                    <div class="preview__inner">
-                        <div class="card">
-                            <h2 class="card__title">Tooltip</h2>
-                        </div>
-                        <div class="card">
-                            <h2 class="card__title">Custom form elements</h2>
-                        </div>
-                        <div class="card">
-                            <h2 class="card__title">Calendar</h2>
-                        </div>
-                        <div class="card">
-                            <h2 class="card__title">Modal dialog</h2>
-                        </div>
-                        <div class="card">
-                            <h2 class="card__title">Histogram</h2>
-                        </div>
-                        <div class="card">
-                            <h2 class="card__title">Avatar</h2>
-                        </div>
-                    </div>
-                </div> -->
             </main>
             <footer class="footer footer_none">
                 <h1 class="footer__title">About</h1>
