add burger menu

--- a/09-lection7/01-burger-menu/index.html
+++ b/09-lection7/01-burger-menu/index.html
@@ -4,9 +4,31 @@
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./burger-menu.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script defer src="./burger-menu.js"></script>
     </head>
-    <body>
-
+    <body class="preload">
+        <input class="burger-menu__radio" type="radio" id="burger-menu-open" name="burger-menu">
+        <label class="burger-menu__button burger-menu__button_open" for="burger-menu-open">
+            <svg class="burger-menu__icon_open">
+                <use href="../../assets/icons/icons-sprite.svg#menu"></use>
+            </svg>
+        </label>
+        <input class="burger-menu__radio" type="radio" id="burger-menu-close" name="burger-menu">
+        <div class="burger-menu">
+            <label class="burger-menu__button" for="burger-menu-close">
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="16" cy="16" r="16" fill="#DDE2E5"/>
+                    <path d="M22 10L10 22" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M10 10L22 22" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </label>
+        </div>
+        <script>
+            $(window).load(function() {
+            $("body").removeClass("preload");
+            });
+            //document.body.classList.remove ("preload");
+        </script>    
     </body>
 </html>
