--- a/09-lection7/01-burger-menu/index.html
+++ b/09-lection7/01-burger-menu/index.html
@@ -5,10 +5,43 @@
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./burger-menu.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script defer src="./burger-menu.js"></script>
+        <!-- <script defer src="./burger-menu.js"></script> -->
     </head>
     <body class="preload">
-        <input class="burger-menu__radio" type="radio" id="burger-menu-open" name="burger-menu">
+        <!-- <button id="burger-menu-open">
+            <svg>
+                <use href="../../assets/icons/icons-sprite.svg#menu"></use>
+            </svg>
+        </button>
+        <div class="burger-menu" id="burger-menu">
+            <button id="burger-menu-close">
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="16" cy="16" r="16" fill="#DDE2E5"/>
+                    <path d="M22 10L10 22" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M10 10L22 22" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+        </div> -->
+        
+        <div class="burger-menu">
+            <input class="burger-menu__radio burger-menu__radio_open" type="radio" id="burger-menu-open" name="burger-menu">
+            <label class="burger-menu__button burger-menu__button_open" for="burger-menu-open">
+                <svg class="burger-menu__icon_open">
+                    <use href="../../assets/icons/icons-sprite.svg#menu"></use>
+                </svg>
+            </label>
+            <div class="burger-menu__modal">
+                <label class="burger-menu__button" >
+                    <input class="burger-menu__radio" type="radio" name="burger-menu">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="16" cy="16" r="16" fill="#DDE2E5"/>
+                        <path d="M22 10L10 22" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M10 10L22 22" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </label>
+            </div>
+        </div>
+        <!-- <input class="burger-menu__radio" type="radio" id="burger-menu-open" name="burger-menu">
         <label class="burger-menu__button burger-menu__button_open" for="burger-menu-open">
             <svg class="burger-menu__icon_open">
                 <use href="../../assets/icons/icons-sprite.svg#menu"></use>
@@ -23,12 +56,9 @@
                     <path d="M10 10L22 22" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </label>
-        </div>
+        </div> -->
         <script>
-            $(window).load(function() {
-            $("body").removeClass("preload");
-            });
-            //document.body.classList.remove ("preload");
+            document.querySelector('body').classList.remove ("preload");
         </script>    
     </body>
 </html>
