--- a/07-lection5/03-toggler/index.html
+++ b/07-lection5/03-toggler/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./toggler.css">
     </head>
-    <body>
+    <body class="preload">
         <label class="toggle">
             <input class="toggle__input" type="checkbox">
             <span class="toggle__state">
@@ -33,5 +33,8 @@
                 <span class="toggle__title">Disabled</span>
             </span>
         </label>
+        <script>
+            document.querySelector('body').classList.remove ("preload");
+        </script>
     </body>
 </html>
