--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -8,15 +8,15 @@
     <body>
         <div class="skeleton">
             <div class="skeleton__header">
-                <div class="skeleton__header-avatar"></div>
+                <div class="skeleton__header-avatar skeleton_animation"></div>
                 <div class="skeleton__header-line">
-                    <div class="skeleton__line skeleton__line_short"></div>
-                    <div class="skeleton__line skeleton__line_middle"></div>
+                    <div class="skeleton__line skeleton__line_short skeleton_animation"></div>
+                    <div class="skeleton__line skeleton__line_middle skeleton_animation"></div>
                 </div>
             </div>
             <div class="skeleton__main">
-                <div class="skeleton__line skeleton__line_long"></div>
-                <div class="skeleton__line skeleton__line_long"></div>
+                <div class="skeleton__line skeleton__line_long skeleton_animation"></div>
+                <div class="skeleton__line skeleton__line_long skeleton_animation"></div>
             </div>
         </div>
 
