--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -4,6 +4,11 @@
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./checkbox.css">
+        <style>
+            body {
+                padding: 50px;
+            }
+        </style>
     </head>
     <body>
         <label class="checkbox">
